# pandastic

./: MANIFEST.in  README.md  pyproject.toml  setup.sh
src/pandastic/: __init__.py  common.py  dataset_handlers.py  download.py  generate_dids_list.py  monitor_rule.py  pandastic_RSE.py  pandastic_data_manager.py  pandastic_delete_rules.py  pandastic_download.py  pandastic_is_ds_related_to_done_job.py  pandastic_pause_tasks.py  pandastic_replicate.py  pandastic_replicate_better.py  pandastic_retry.py  pandastic_rse_report.py  pandastic_tabulate_jobs.py  pandastic_task_manager.py  pandastic_update_rules.py  pandastic_upload.py  pandastic_whats_on_rse.py  replicate_actions.py  retry_jobs.py  tools.py  update_actions.py
src/pandastic/actions/: delete_actions.py  filelist_actions.py  update_actions.py  upload_actions.py
src/pandastic/cli/: data_manager.py  task_manager.py
src/pandastic/utils/: common.py  dataset_handlers.py  tools.py
src/pandastic/wip/: pandastic_is_ds_related_to_done_job.py  pandastic_monitor_rules.py  pandastic_tabulate_jobs.py
