[build-system]
requires = ["setuptools>=69.2.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pandastic"
description = "A command line tool for manipulating PanDA tasks and rucio datasets"
readme = "README.md"
authors = [{name = "Mohamed Aly", email = "mohamed.aly@cern.ch"},]
maintainers = [{name = "Mohamed Aly", email = "mohamed.aly@cern.ch"}]
requires-python = ">=3.10"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Physics",
    "Typing :: Typed"
]

dynamic = ["version"]
dependencies = ["panda-client>=1.5.41",
                "pandas>=1.5.3",
                "rucio-clients>=1.29.10",
                "jsonschema>=3.2.0",
                "numpy>=1.24.2",
                "urllib3>=1.26.8",
                "rucio>=35.0.0",
                ]

[project.urls]
homepage =  "https://github.com/MoAly98/pandastic/tree/main"

[tool.setuptools.packages.find]
where   = ["src"]
include = ["pandastic", "pandastic.cli", "pandastic.actions", "pandastic.utils"]

[tool.setuptools.dynamic]
version = {attr = "pandastic.__version__"}

[project.scripts]
pandastic-tasks = "pandastic.cli.task_manager:run"
pandastic-data  = "pandastic.cli.data_manager:run"
